--- a/package.json
+++ b/package.json
@@ -18,6 +18,6 @@
     "html-webpack-plugin": "^2.30.1",
     "three": "^0.87.1",
     "three-orbitcontrols": "^1.2.1",
-    "three-trackballcontrols": "0.0.6",
+    "three-trackballcontrols": "0.0.6"
   }
 }
